--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.1.5",
     "antd": "^5.25.0",
     "axios": "^1.9.0",
+    "framer-motion": "^12.18.1",
     "lodash": "^4.17.21",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
